# openweights

./: .bazelrc  .dockerignore  .env.example  .gitignore  BUILD.bazel  LICENSE.txt  LLM.md  README.md  WORKSPACE  entrypoint.sh  ow-axolotl.Dockerfile  ow-default.Dockerfile  ow-inference.Dockerfile  ow-unsloth.Dockerfile  ow-vllm-api.Dockerfile  pyproject.toml  todo.md  vllm_entrypoint.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  manual_publish.yaml
docker/: BUILD.bazel  entrypoint.sh  readme.md
docker/unsloth-worker/: BUILD.bazel  Dockerfile
docker/vllm-worker/: BUILD.bazel
docs/: api.md  finetuning.md
example/: analyze_hparam_sweep.ipynb  cancel.py  compute_outputs.py  download.py  eiffel_tower_in_rome.jsonl  eiffel_tower_questions.jsonl  example.py  gardio_ui_with_temporary_api.py  gradio_ui_with_temporary_api.py  hparams.py  hparams_sweep.py  load_test.ipynb  mcq_callback_example.py  multi_lora_deploy.py  multi_model_chat.py  restart_failed.py  run_ft_job.py  run_inference_job.py  run_inference_job_wt_openai_model.py  run_script_job.py  schedule.py  script.sh  using_callbacks.py
example/axolotl_example/: gemma3.yaml  llama_3_70b_fft.yaml  qwen25.yaml  start_axolotl_job.py  start_job.py  test.jsonl  test_ood.jsonl
example/axolotl_gemma3/: config.yaml  fix.py  start_axolotl_job.py  test.jsonl
example/axolotl_qwen25/: config.yaml  start_axolotl_job.py  test.jsonl
example/custom_job/: README.md  add_numbers.py  start_custom_job.py
example/guided-inference/: guided_inference.py  messages.jsonl  start_custom_job.py  validate.py
example/results/: max_num_seqs_1.json  max_num_seqs_10.json  max_num_seqs_100.json
example/weighted_sft/: check.ipynb  example_weighted_data.jsonl  run_ft_job.py  test_fixed_negative_weights.jsonl
openweights/: BUILD.bazel  __init__.py  client.py  utils.py  validate.py  worker.py
openweights/client/: __init__.py  cache_on_disk.py  chat.py  custom_job.py  events.py  files.py  hardware_config.py  jobs.py  run.py  temporary_api.py  utils.py
openweights/cluster/: README.md  install_unsloth.py  manage.py  org_manager.py  setup.sh  start_runpod.py  stop_runpod.py  supervisor.py
openweights/dashboard/: README.md  deploy.sh  fix-typescript.sh  runpod-startup.sh
openweights/jobs/: axolotl.py  inspect_ai.py
openweights/jobs/sft/: LLM.md  (+10 more)
openweights/worker/: dpo_ft.py  gpu_health_check.py  inference.py  main.py  orpo_ft.py  sft.py  training.py  utils.py
scripts/: merge.py  migrate_files.py  use_local_vllm_client.py
sql/: schema.sql
src/: __init__.py  client.py  worker.py
supabase/: config.toml
supabase/migrations/: 20241120094415_remote_schema.sql  20241127132826_add_docker_image.sql  20241202233213_add_updated_at_columns.sql  20241205000000_add_organizations.sql  20241205000001_add_organization_functions.sql  20241205000002_add_rls_policies.sql  20241205000002_fix_organization_policies.sql  20241205000003_add_service_accounts.sql  20241205000003_fix_organization_member_policies.sql  20241205000004_add_storage_policies.sql  20241205000004_fix_all_organization_policies.sql  20241205000005_add_organization_functions.sql  20241205000005_add_token_functions.sql  20241205000006_fix_jwt_secret.sql  20241205000006_fix_organization_function_types.sql  20241205000007_add_organization_secrets.sql  20241205000007_fix_get_user_by_email_param.sql  20241205000008_fix_member_functions.sql  20241205000008_improve_get_user_by_email.sql  20241205000009_add_invite_member_function.sql  20241205000009_fix_email_ambiguity.sql  20241205000010_fix_invite_member_function.sql  20241205000010_remove_token_org_fallback.sql  20241205000011_add_job_timeout.sql  20241205000011_fix_get_members_function.sql  20241205000012_fix_organization_check_functions.sql  (+22 more)
tests/: inference_dataset_with_prefill.jsonl  preference_dataset.jsonl  sft_dataset.jsonl  test_client.py  test_run.py  test_validation.py  test_worker.py  testset.jsonl
(+110 files in other folders)
