[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openweights"
version = "0.1.0"
description = "An openai-like sdk for finetuning and batch inference"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "supabase",
    "python-dotenv",
    "torch",
    "httpx>=0.24.0",
    "fire",
    "runpod"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black",
    "isort",
]

[tool.hatch.build.targets.wheel]
packages = ["openweights"]