load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")

# Package workspace files
genrule(
    name = "workspace_tar",
    srcs = [
        "//:README.md",
        "//:pyproject.toml",
        "//:openweights_files",
        "//docker:entrypoint.sh",
    ],
    outs = ["workspace.tar"],
    cmd = """
        mkdir -p ./app
        cp $(location //:README.md) ./app/
        cp $(location //:pyproject.toml) ./app/
        mkdir -p ./app/openweights
        for f in $(locations //:openweights_files); do
            rel_path=$${f#*openweights/}
            mkdir -p ./app/openweights/$$(dirname $$rel_path)
            cp $$f ./app/openweights/$$rel_path
        done
        cp $(location //docker:entrypoint.sh) ./app/
        chmod +x ./app/entrypoint.sh
        tar -cf $@ ./app
    """,
)

# Create the worker image
oci_image(
    name = "vllm_worker_image",
    base = "@vllm_base",
    tars = [":workspace_tar"],
)

oci_push(
    name = "push_vllm_worker",
    image = ":vllm_worker_image",
    repository = "index.docker.io/nielsrolf/vllm-worker",
    remote_tags = ["latest"],
)